<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#ee000000"
    android:layout_height="match_parent"
    
    android:orientation="vertical" >

    <LinearLayout
        android:layout_margin="@dimen/explainPadding2"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/paddingNormal"
            android:text="@string/confirm_permission_dashboard"
            android:textColor="@color/black" />

        <LinearLayout
            android:padding="@dimen/paddingNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/agree"
                android:textColor="#0288d1" />

            <TextView
                android:id="@+id/tv_guide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/guide"
                android:textColor="#0288d1" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>