<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lnHomeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cc000000"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_round"
        android:clickable="true"
        android:minHeight="30dp" >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
              android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/notify" />
        
        <TextView
            android:layout_below="@+id/tvTitle"
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/black"
            android:text="@string/closeDashBoard" />

        <TextView
            android:id="@+id/tvWithDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tvContent"
            android:layout_marginLeft="-10dp"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/lnNormalAction"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/tvWithDivider"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancelCloseDb"
                android:textColor="@color/darkGreen" />

            <TextView
                android:id="@+id/tvCenterDivider"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/divider" />

            <TextView
                android:id="@+id/tvAccept"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/agree"
                android:textColor="@color/darkGreen"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>