<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lnHomeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cc000000"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="@dimen/explainWith"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:clickable="true"
        android:minHeight="30dp" >

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/explainPadding"
            android:text="@string/connectMessage"
            android:textColor="#b3000000"
            android:textSize="@dimen/explainTextSize" />

   

        <LinearLayout
            android:gravity="right"
            android:id="@+id/lnNormalAction"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/tvContent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_weight="1"
                android:paddingLeft="@dimen/explainPadding"
                android:paddingRight="@dimen/explainPadding"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="#0288d1"
                android:textSize="@dimen/explainTextSize" />

            <TextView
                android:id="@+id/tvConnect"
                android:layout_width="0dp"
                android:layout_height="40dp"
                    android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="@dimen/explainPadding"
                android:paddingRight="@dimen/explainPadding"
                android:text="@string/connectAcc"
                android:textAllCaps="true"
                android:textColor="#0288d1"
                android:textSize="@dimen/explainTextSize" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>