<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layoutMatch"
    android:background="@color/crystal" >

     <RelativeLayout
        android:id="@+id/rlHeader"
        style="@style/layoutMatchWrap"
        android:background="@drawable/bg_header"
        android:minHeight="@dimen/buttonHeight" >

        <TextView
            android:id="@+id/tvHeaderTitle"
            style="@style/textViewHeader"
            android:layout_centerInParent="true"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:text="@string/textviewFormatSDKVersion" />

        <ImageButton
            android:id="@+id/ibHeaderLeft"
            style="@style/imageButtonNormal"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@null"
            android:src="@drawable/ic_back_white" />

        
    </RelativeLayout>

    <WebView
        android:id="@+id/wv"
        style="@style/layoutMatch"
        android:layout_below="@+id/rlHeader"
        android:background="@android:color/transparent" />

    <RelativeLayout
        android:id="@+id/rl"
        style="@style/layoutMatch" >

        <ProgressBar
            style="@style/layoutWrap"
            android:layout_centerInParent="true" />

    </RelativeLayout>
    <ImageView
            android:id="@+id/imgBackPayment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/iconback" />
    
    
    <LinearLayout
        android:id="@+id/lnErr"
        style="@style/layoutMatch"
        android:layout_below="@+id/rlHeader"
        android:background="#FFFFFF"
        android:clickable="true"
        android:visibility="gone"
        android:orientation="vertical"
    >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/errorConnect"
            android:textColor="#000" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/smile" />

        <Button
            android:id="@+id/btnTryAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_retry_connect"
            android:minHeight="@dimen/buttonHeight"
            android:text="@string/retry"
            android:textColor="#FFF" />
    </LinearLayout>

</RelativeLayout>